Fixed word wrapping

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -27,9 +27,10 @@
       flex: 1 0 auto;
   }
 
-  .display{
+ .display{
       font-family: 'Courier New', Courier, monospace;
       font-weight: 700;
+      letter-spacing: 4px;
   }
 
   #Status, #PlayArea, #Keyboard{
@@ -55,5 +56,5 @@
 
 .used{
     background: grey;
-}
+} 
 
